melengkapi konten yang masih kosong di pss

--- a/cantik.html
+++ b/cantik.html
@@ -32,14 +32,10 @@
                         <a class="nav-link" href="pss.html">P S S</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="epss.html">E P S S</a>
+                        <a class="nav-link" href="epss.html">E P S S</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="cantik.html">Desa Cantik</a>
-                    </li>
-                    <!-- New Theme Settings Nav Item -->
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#themeSettingsModal">Theme</a>
+                        <a class="nav-link active" href="cantik.html">Desa Cantik</a>
                     </li>
                 </ul>
             </div>
@@ -72,7 +68,7 @@
                 <div class="accordion" id="accordionTab1">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="heading1Tab1">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab1" aria-expanded="true" aria-controls="collapse1Tab1">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab1" aria-expanded="false" aria-controls="collapse1Tab1">
                                 Agen/Komunitas Statistik
                             </button>
                         </h2>
@@ -107,11 +103,12 @@
             <!-- Indikator 2 -->
             <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab2-tab">
                 <h3>Indikator 2. KAPASITAS STATISTIK</h3>
+                <br>
                 <div class="accordion" id="accordionTab2">
                     <!-- 10 -->
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="heading1Tab2">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab2" aria-expanded="true" aria-controls="collapse1Tab2">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab2" aria-expanded="false" aria-controls="collapse1Tab2">
                                 Pembinaan statistik
                             </button>
                         </h2>
@@ -199,10 +196,11 @@
             <!-- Indikator 3 -->
             <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
                 <h3>Indikator 3. MANAJEMEN DATA</h3>
+                <br>
                 <div class="accordion" id="accordionTab3">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="heading1Tab3">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab3" aria-expanded="true" aria-controls="collapse1Tab3">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab3" aria-expanded="false" aria-controls="collapse1Tab3">
                                 Ketersediaan dan Kualitas Data
                             </button>
                         </h2>
@@ -262,10 +260,11 @@
             <!-- Indikator 4 -->
             <div class="tab-pane fade" id="tab4" role="tabpanel" aria-labelledby="tab4-tab">
                 <h3>List Ragam Data Permendagri 12/2007</h3>
+                <br>
                 <div class="accordion" id="accordionTab4">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="heading1Tab4">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab4" aria-expanded="true" aria-controls="collapse1Tab4">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab4" aria-expanded="false" aria-controls="collapse1Tab4">
                                 Perkembangan penduduk
                             </button>
                         </h2>
