--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html">PEKPPP</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">PEKPPP</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="rbzi.html">WBK-WBBM</a>
@@ -32,14 +32,16 @@
                         <a class="nav-link" href="pss.html">P S S</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="epss.html">E P S S</a>
+                        <a class="nav-link" href="epss.html">E P S S</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="cantik.html">Desa Cantik</a>
                     </li>
-                    <!-- New Theme Settings Nav Item -->
                     <li class="nav-item">
-                        <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#themeSettingsModal">Theme</a>
+                        <a class="nav-link" href="#">K I P</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">ISO-9001</a>
                     </li>
                 </ul>
             </div>
@@ -71,14 +73,14 @@
 
         <!-- Tab Content - Content will be dynamically loaded by JavaScript -->
         <div class="tab-content border border-top-0 p-3" id="myTabContent">
-            <!-- Aspek 1 -->
+            <!-- Aspek 1 Kebijakan-->
             <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="tab1-tab">
-                <h3>Aspek 1. Kebijakan Pelayanan Publik</h3>
+                <h3><a href="https://www.youtube.com/watch?v=_DziFT04p1Q&pp=ygUaa2ViaWpha2FuIHBlbGF5YW5hbiBwdWJsaWs%3D" target="_blank">Aspek 1. Kebijakan Pelayanan Publik</a></h3>
                 <br>
                 <div class="accordion" id="accordionTab1">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="heading1Tab1">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab1" aria-expanded="true" aria-controls="collapse1Tab1">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab1" aria-expanded="false" aria-controls="collapse1Tab1">
                                 1. Tersedia Standar Pelayanan (SP) sesuai dengan ketentuan peraturan perundang-undangan yang berlaku
                             </button>
                         </h2>
@@ -263,14 +265,15 @@
                 </div>
             </div>
 
-            <!-- Aspek 2 -->
+            <!-- Aspek 2 SDM-->
             <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab2-tab">
-                <h3>Aspek 2. Profesionalisme SDM</h3>
+                <h3><a href="https://www.youtube.com/watch?v=bujE7s9JASA&t=12s&pp=ygUqcHJvZmVzaW9uYWxpc21lIHNkbSBkYWxhbSBwZWxheWFuYW4gcHVibGlr0gcJCbIJAYcqIYzv" target="_blank">Aspek 2. Profesionalisme SDM</a></h3>
+                <br>
                 <div class="accordion" id="accordionTab2">
                     <!-- 10 -->
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="heading1Tab2">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab2" aria-expanded="true" aria-controls="collapse1Tab2">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab2" aria-expanded="false" aria-controls="collapse1Tab2">
                                 10. Tersedia waktu pelayanan yang memudahkan pengguna layanan.
                             </button>
                         </h2>
@@ -385,13 +388,14 @@
                 </div>
             </div>
 
-            <!-- Aspek 3 -->
+            <!-- Aspek 3 Sarpras-->
             <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
-                <h3>Aspek 3. Sarana dan Prasarana</h3>
+                <h3><a href="https://www.youtube.com/watch?v=ruQVRVnMcCM&pp=ygUxYXNwZWsgc2FyYW5hIGRhbiBwcmFzYXJhbmEgZGFsYW0gcGVsYXlhbmFuIHB1Ymxpaw%3D%3D" target="_blank">Aspek 3. Sarana dan Prasarana</a></h3>
+                <br>
                 <div class="accordion" id="accordionTab3">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="heading1Tab3">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab3" aria-expanded="true" aria-controls="collapse1Tab3">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab3" aria-expanded="false" aria-controls="collapse1Tab3">
                                 15. Tersedia tempat parkir dengan fasilitas pendukung yang memadai.
                             </button>
                         </h2>
@@ -547,13 +551,14 @@
                 </div>
             </div>
 
-            <!-- Aspek 4 -->
+            <!-- Aspek 4 SIPP-->
             <div class="tab-pane fade" id="tab4" role="tabpanel" aria-labelledby="tab4-tab">
-                <h3>Aspek 4. Sistem Informasi Pelayanan Publik</h3>
+                <h3><a href="https://www.youtube.com/watch?v=-jJ-Rbgavvg&pp=ygUnYXNwZWsgc2lzdGVtIGluZm9ybWFzaSBwZWxheWFuYW4gcHVibGlr" target="_blank">Aspek 4. Sistem Informasi Pelayanan Publik</a></h3>
+                <br>
                 <div class="accordion" id="accordionTab4">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="heading1Tab4">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab4" aria-expanded="true" aria-controls="collapse1Tab4">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab4" aria-expanded="false" aria-controls="collapse1Tab4">
                                 21. Tersedia sistem informasi pelayanan publik untuk informasi publik.
                             </button>
                         </h2>
@@ -614,20 +619,39 @@
                             </div>
                         </div>
                     </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading5Tab4">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse5Tab4" aria-expanded="false" aria-controls="collapse5Tab4">
+                                Preview SIPPN Menpan-RB
+                            </button>
+                        </h2>
+                        <div id="collapse5Tab4" class="accordion-collapse collapse" aria-labelledby="heading5Tab4" data-bs-parent="#accordionTab4">
+                            <div class="accordion-body">
+                                <br>
+                                <p>
+                                    <a href="https://sites.google.com/view/sippn3200" target="_blank">Buka Preview SIPPN MenPAN</a>
+                                </p>
+                                <p>
+                                    <a href="https://www.youtube.com/watch?v=X82ZmvAyLyQ&pp=ygUnYXNwZWsgc2lzdGVtIGluZm9ybWFzaSBwZWxheWFuYW4gcHVibGlr" target="_blank">Coaching Clinic MenPAN</a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
-            <!-- Aspek 5 -->
+            <!-- Aspek 5 Konsultasi dan Pengaduan-->
             <div class="tab-pane fade" id="tab5" role="tabpanel" aria-labelledby="tab5-tab">
-                <h3>Aspek 5. Konsultasi dan Pengaduan</h3>
+                <h3><a href="https://www.youtube.com/watch?v=B0ZuJRlUgQ0&pp=ygUeYXNwZWsga29uc3VsdGFzaSBkYW4gcGVuZ2FkdWFu" target="_blank">Aspek 5. Konsultasi dan Pengaduan</a></h3>
+                <br>
                 <div class="accordion" id="accordionTab5">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="heading1Tab5">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab5" aria-expanded="true" aria-controls="collapse1Tab5">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab5" aria-expanded="true" aria-controls="collapse1Tab5">
                                 25. Tersedia sarana konsultasi dan pengaduan secara tatap muka yang berkualitas.
                             </button>
                         </h2>
-                        <div id="collapse1Tab5" class="accordion-collapse collapse show" aria-labelledby="heading1Tab5" data-bs-parent="#accordionTab5">
+                        <div id="collapse1Tab5" class="accordion-collapse collapse" aria-labelledby="heading1Tab5" data-bs-parent="#accordionTab5">
                             <div class="accordion-body">
                                 <br>
                                 <p>Sarana konsultasi dan pengaduan adalah fasilitas dalam memberikan layanan konsultasi dan pengaduan kepada masyarakat dengan perlakuan yang sama, tidak diskriminatif, dan perlakuan khusus bagi kelompok rentan.
@@ -699,17 +723,18 @@
                 </div>
             </div>
 
-            <!-- Aspek 6 -->
+            <!-- Aspek 6 Inovasi-->
             <div class="tab-pane fade" id="tab6" role="tabpanel" aria-labelledby="tab6-tab">
-                <h3>Aspek 6. Inovasi</h3>
+                <h3><a href="https://www.youtube.com/watch?v=qBNUFDHXmXU&pp=ygUeYXNwZWsgaW5vdmFzaSBwZWxheWFuYW4gcHVibGlr" target="_blank">Aspek 6. Inovasi</a></h3>
+                <br>
                 <div class="accordion" id="accordionTab6">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="heading1Tab6">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab6" aria-expanded="true" aria-controls="collapse1Tab6">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab6" aria-expanded="false" aria-controls="collapse1Tab6">
                                 29. Penciptaan Inovasi Pelayanan Publik.
                             </button>
                         </h2>
-                        <div id="collapse1Tab6" class="accordion-collapse collapse show" aria-labelledby="heading1Tab6" data-bs-parent="#accordionTab6">
+                        <div id="collapse1Tab6" class="accordion-collapse collapse" aria-labelledby="heading1Tab6" data-bs-parent="#accordionTab6">
                             <div class="accordion-body">
                                 <br>
                                 <ol>
@@ -743,6 +768,39 @@
                                     <li>d. Sumber Daya Manusia: SK perorangan dan/atau tim yang menginisiasi penciptaan inovasi.</li>
                                     </ul>
                                 </ol>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading3Tab6">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3Tab6" aria-expanded="false" aria-controls="collapse3Tab6">
+                                KIPP Mandiri
+                            </button>
+                        </h2>
+                        <div id="collapse3Tab6" class="accordion-collapse collapse" aria-labelledby="heading3Tab6" data-bs-parent="#accordionTab6">
+                            <div class="accordion-body">
+                                <br>
+                                <p>
+                                    <ul>
+                                        <li><a href="https://drive.google.com/file/d/1rVobXmgeCdHvsfiuHs2BcmRE4tN8oFQv/view?usp=sharing" target="_blank">KIPP Mandiri BPS 2025</a></li>
+                                        <li><a href="https://drive.google.com/file/d/1HsIeibt90zT3kH671AWhr7ioe2sQSzoF/view?usp=sharing" target="_blank">Strategi Penyusunan Proposal KIPP</a></li>
+                                        <li><a href="https://youtube.com/live/2gJlWknj_6Q?feature=share" target="_blank">Youtube KIPP Mandiri BPS</a></li>
+                                        <li><a href="https://docs.google.com/spreadsheets/d/1-v01PH77YbUrXq7uRySpmCd39lboYa9K3cnUlZHHzRA/edit?usp=sharing" target="_blank">QnA</a></li>
+                                        <li><a href="https://docs.google.com/document/d/1VLOQyk1mKbM3F6-uelfTK20tRo1PH3Wy/edit?usp=sharing&ouid=111867882724584455003&rtpof=true&sd=true" target="_blank">Template Proposal</a></li>
+                                        <li>
+                                            <a href="https://www.youtube.com/watch?v=d2VLXhNWXc4&pp=ygUeYXNwZWsgaW5vdmFzaSBwZWxheWFuYW4gcHVibGlr" target="_blank">Kebijakan Inovasi</a>
+                                        </li>
+                                        <li>
+                                            <a href="https://www.youtube.com/watch?v=d4ufqxvBtOQ&pp=ygUeYXNwZWsgaW5vdmFzaSBwZWxheWFuYW4gcHVibGlr" target="_blank">Implementasi Pembinaan Inovasi</a>
+                                        </li>
+                                        <li>
+                                            <a href="https://www.youtube.com/watch?v=eMUVjSJbfNc&pp=ygUeYXNwZWsgaW5vdmFzaSBwZWxheWFuYW4gcHVibGlr" target="_blank">Scaling Up Inovasi</a>
+                                        </li>
+                                        <li>
+                                            <a href="https://www.youtube.com/watch?v=Ie3V8VrxjGE&pp=ygUeYXNwZWsgaW5vdmFzaSBwZWxheWFuYW4gcHVibGlr" target="_blank">Inovasi Berkelanjutan</a>
+                                        </li>
+                                    </ul>
+                                </p>
                             </div>
                         </div>
                     </div>
