--- a/pss.html
+++ b/pss.html
@@ -13,7 +13,7 @@
     <!-- Sticky Header -->
     <header class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow-sm">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">E P S S</a>
+            <a class="navbar-brand" href="#">P S S</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -29,17 +29,13 @@
                         <a class="nav-link" href="sakip.html">SAKIP</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="pss.html">P S S</a>
+                        <a class="nav-link active" href="pss.html">P S S</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="epss.html">E P S S</a>
+                        <a class="nav-link" href="epss.html">E P S S</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="cantik.html">Desa Cantik</a>
-                    </li>
-                    <!-- New Theme Settings Nav Item -->
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#themeSettingsModal">Theme</a>
                     </li>
                 </ul>
             </div>
@@ -68,14 +64,14 @@
 
         <!-- Tab Content - Content will be dynamically loaded by JavaScript -->
         <div class="tab-content border border-top-0 p-3" id="myTabContent">
-            <!-- Domain 1 -->
+            <!-- Domain 1 SDI -->
             <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="tab1-tab">
                 <h3>Domain 1. Prinsip Satu Data Indonesia</h3>
                 <br>
                 <div class="accordion" id="accordionTab1">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="heading1Tab1">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab1" aria-expanded="true" aria-controls="collapse1Tab1">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab1" aria-expanded="false" aria-controls="collapse1Tab1">
                                 Penerapan Standar Data Statistik (SDS)
                             </button>
                         </h2>
@@ -86,6 +82,9 @@
                                 <p>• Data yang dihasilkan produsen data harus memenuhi standar data.</p>
                                 <p>• Standar data statistik yang berlaku lintas Instansi Pusat dan/atau Instansi Daerah ditetapkan oleh BPS.</p>
                                 <p>• Standar data statistik yang pemanfaatannya ditujukan untuk memenuhi kebutuhan instansi sesuai tugas dan fungsinya (tidak lintas Instansi Pusat dan/atau Instansi Daerah) dapat ditetapkan oleh Menteri atau Kepala Instansi Pusat.</p>
+                                <p>
+                                    <a href="https://indah.bps.go.id/standar-data-statistik-nasional" target="_blank">Standar Data Statistik Nasional</a>
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -125,6 +124,9 @@
                                     <li>konsisten dalam sintak/bentuk, struktur/skema/komposisi penyajian, dan semantik/artikulasi keterbacaan;</li>
                                     <li>disimpan dalam format terbuka yang dapat dibaca sistem elektronik.</li>
                                 </ol>
+                                <p>
+                                    <a href="https://peraturan.bpk.go.id/Details/255562/permenkominfo-no-1-tahun-2023" target="_blank">Peraturan Menkominfo tentang Interoperabilitas Data</a>
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -141,20 +143,28 @@
                                 <p>Kode Referensi adalah tanda berisi karakter yang mengandung atau menggambarkan makna, maksud, atau norma tertentu sebagai rujukan identitas data yang bersifat unik.</p>
                                     <p>• Data Induk adalah data yang merepresentasikan objek dalam proses bisnis pemerintah yang ditetapkan sesuai dengan ketentuan dalam Peraturan Presiden tentang Satu Data Indonesia untuk digunakan bersama.</p>
                                     <p>• Data yang dihasilkan oleh Produsen Data pada implementasi Satu Data Indonesia harus menggunakan Kode Referensi dan/atau Data Induk yang dibahas dan disepakati pada Forum Satu Data Indonesia.</p>
+                                    <p>
+                                        <a href="https://pss3200.streamlit.app/Kode_Referensi" target="_blank">Contoh Penerapan Kode Referensi</a>
+                                    </p>
                             </div>
                         </div>
                     </div>
+                    <br>
+                    <p>
+                        <a href="https://drive.google.com/file/d/1STnvC6GOmaImybDi5PdJwStine-kTXw2/view?usp=sharing" target="_blank">Baca Modul Lengkap</a>
+                    </p>
                 </div>
             </div>
 
-            <!-- Domain 2 -->
+            <!-- Domain 2 Kualitas Data -->
             <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab2-tab">
                 <h3>Domain 2. Kualitas Data</h3>
+                <br>
                 <div class="accordion" id="accordionTab2">
                     <!-- 10 -->
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="heading1Tab2">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab2" aria-expanded="true" aria-controls="collapse1Tab2">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab2" aria-expanded="false" aria-controls="collapse1Tab2">
                                 Relevansi Data Terhadap Pengguna
                             </button>
                         </h2>
@@ -290,15 +300,20 @@
                         </div>
                     </div>
                 </div>
+                <br>
+                    <p>
+                        <a href="https://drive.google.com/file/d/1MXduD16UdSjHK9zCU_GloQ1bnSaawi4u/view?usp=sharing" target="_blank">Baca Modul Lengkap</a>
+                    </p>
             </div>
 
-            <!-- Domain 3 -->
+            <!-- Domain 3 Probis -->
             <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
                 <h3>Domain 3. Proses Bisnis Statistik</h3>
+                <br>
                 <div class="accordion" id="accordionTab3">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="heading1Tab3">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab3" aria-expanded="true" aria-controls="collapse1Tab3">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab3" aria-expanded="false" aria-controls="collapse1Tab3">
                                 Pendefinisian Kebutuhan Statistik
                             </button>
                         </h2>
@@ -389,16 +404,36 @@
                             </div>
                         </div>
                     </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading8Tab3">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse8Tab3" aria-expanded="false" aria-controls="collapse8Tab3">
+                                Contoh GSBPM di tingkat Desa/Kelurahan
+                            </button>
+                        </h2>
+                        <div id="collapse8Tab3" class="accordion-collapse collapse" aria-labelledby="heading8Tab3" data-bs-parent="#accordionTab3">
+                            <div class="accordion-body">
+                                <br>
+                                <iframe src="https://firmanh3200.github.io/cantik/" width="100%" height="600px"></iframe>
+                                <br><br>
+                                <a href="https://firmanh3200.github.io/cantik/" target="_blank">Buka di Layar Baru</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+                <br>
+                    <p>
+                        <a href="https://drive.google.com/file/d/1rGRIdKws-JnF8qW4mlw60NYljeqzq1of/view?usp=sharing" target="_blank">Baca Modul Lengkap</a>
+                    </p>
             </div>
 
-            <!-- Domain 4 -->
+            <!-- Domain 4 Kelembagaan -->
             <div class="tab-pane fade" id="tab4" role="tabpanel" aria-labelledby="tab4-tab">
                 <h3>Domain 4. Kelembagaan</h3>
+                <br>
                 <div class="accordion" id="accordionTab4">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="heading1Tab4">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab4" aria-expanded="true" aria-controls="collapse1Tab4">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab4" aria-expanded="false" aria-controls="collapse1Tab4">
                                 Penjaminan Transparansi Informasi Statistik
                             </button>
                         </h2>
@@ -581,19 +616,24 @@
                         </div>
                     </div>
                 </div>
+                <br>
+                    <p>
+                        <a href="https://drive.google.com/file/d/1e8eTnj2jA968pUJy1_cNyh9cKSMoCJDk/view?usp=sharing" target="_blank">Baca Modul Lengkap</a>
+                    </p>
             </div>
 
-            <!-- Domain 5 -->
+            <!-- Domain 5 SSN -->
             <div class="tab-pane fade" id="tab5" role="tabpanel" aria-labelledby="tab5-tab">
                 <h3>Domain 5. Sistem Statistik Nasional</h3>
+                <br>
                 <div class="accordion" id="accordionTab5">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="heading1Tab5">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab5" aria-expanded="true" aria-controls="collapse1Tab5">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab5" aria-expanded="false" aria-controls="collapse1Tab5">
                                 Penggunaan Data Statistik Dasar untuk Perencanaan, Monitoring, dan Evaluasi, dan / atau Penyusunan Kebijakan
                             </button>
                         </h2>
-                        <div id="collapse1Tab5" class="accordion-collapse collapse show" aria-labelledby="heading1Tab5" data-bs-parent="#accordionTab5">
+                        <div id="collapse1Tab5" class="accordion-collapse collapse" aria-labelledby="heading1Tab5" data-bs-parent="#accordionTab5">
                             <div class="accordion-body">
                                 <br>
                                 <p>Indikator ini bertujuan untuk mengidentifikasi apakah Instansi Pusat dan
@@ -711,6 +751,31 @@
                                     efisiensi operasional dan produktivitas dalam produksi statistik.</p>
                             </div>
                         </div>
+                    </div>
+                </div>
+                <br>
+                    <p>
+                        <a href="https://drive.google.com/file/d/1AMdjtkt4rkze9oW3zyi0pKouEy2291kM/view?usp=sharing" target="_blank">Baca Modul Lengkap</a>
+                    </p>
+            </div>
+
+        </div>
+    </main>
+
+    <main class="container my-4">
+        <div class="accordion" id="pss">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingpss">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapsepss" aria-expanded="false" aria-controls="collapsepss">
+                        Laporkan Kegiatan Pembinaan
+                    </button>
+                </h2>
+                <div id="collapsepss" class="accordion-collapse collapse" aria-labelledby="headingpss" data-bs-parent="#accordionpss">
+                    <div class="accordion-body">
+                        <br>
+                        <p>
+                            <a href="https://sirusa-backend.bps.go.id/pembinaan/public" target="_blank">Lapor Kegiatan Pembinaan</a>
+                        </p>
                     </div>
                 </div>
             </div>
