--- a/sakip.html
+++ b/sakip.html
@@ -26,20 +26,16 @@
                         <a class="nav-link" href="rbzi.html">WBK-WBBM</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="sakip.html">SAKIP</a>
+                        <a class="nav-link active" href="sakip.html">SAKIP</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="pss.html">P S S</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="epss.html">E P S S</a>
+                        <a class="nav-link" href="epss.html">E P S S</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="cantik.html">Desa Cantik</a>
-                    </li>
-                    <!-- New Theme Settings Nav Item -->
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#themeSettingsModal">Theme</a>
                     </li>
                 </ul>
             </div>
@@ -72,7 +68,7 @@
                 <div class="accordion" id="accordionTab1">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="heading1Tab1">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab1" aria-expanded="true" aria-controls="collapse1Tab1">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab1" aria-expanded="false" aria-controls="collapse1Tab1">
                                 Dokumen Perencanaan kinerja telah tersedia
                             </button>
                         </h2>
@@ -149,7 +145,7 @@
                     <!-- 10 -->
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="heading1Tab2">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab2" aria-expanded="true" aria-controls="collapse1Tab2">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab2" aria-expanded="false" aria-controls="collapse1Tab2">
                                 Pengukuran Kinerja telah dilakukan
                             </button>
                         </h2>
@@ -220,7 +216,7 @@
                 <div class="accordion" id="accordionTab3">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="heading1Tab3">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab3" aria-expanded="true" aria-controls="collapse1Tab3">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab3" aria-expanded="false" aria-controls="collapse1Tab3">
                                 Terdapat Dokumen Laporan yang menggambarkan Kinerja
                             </button>
                         </h2>
@@ -291,7 +287,7 @@
                 <div class="accordion" id="accordionTab4">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="heading1Tab4">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab4" aria-expanded="true" aria-controls="collapse1Tab4">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab4" aria-expanded="false" aria-controls="collapse1Tab4">
                                 Evaluasi Akuntabilitas Kinerja Internal telah dilaksanakan
                             </button>
                         </h2>
@@ -347,46 +343,69 @@
                 </div>
             </div>
         </div>
-        <br>
-        <div class="row">
-            <div class="col md-6">
-                <div class="card card-round card-success">
-                    <h5 class="card-header">Jenis Inovasi SAKIP</h5>
-                    <ol>
-                        <li>Kebijakan/regulasi</li>
-                        <li>Teknologi Kesehatan</li>
-                        <li>Teknologi Sistem Informasi</li>
-                        <li>Pelayanan Publik</li>
-                        <li>Budaya Kerja</li>
-                        <li>Metode Kerja/SOP</li>
-                        <li>MoU/perjanjian</li>
-                        <li>Produk Prototipe</li>
-                    </ol>
+    </main>
+
+    <main class="container my-4">
+        <div class="accordion" id="inovasi">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="jenis">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapsejenis" aria-expanded="false" aria-controls="collapsejenis">
+                        Jenis Inovasi SAKIP
+                    </button>
+                </h2>
+                <div id="collapsejenis" class="accordion-collapse collapse" aria-labelledby="jenis" data-bs-parent="#inovasi">
+                    <div class="accordion-body">
+                        <br>
+                        <div class="card card-round card-success">
+                            <h5 class="card-header">Jenis Inovasi SAKIP</h5>
+                            <ol>
+                                <li>Kebijakan/regulasi</li>
+                                <li>Teknologi Kesehatan</li>
+                                <li>Teknologi Sistem Informasi</li>
+                                <li>Pelayanan Publik</li>
+                                <li>Budaya Kerja</li>
+                                <li>Metode Kerja/SOP</li>
+                                <li>MoU/perjanjian</li>
+                                <li>Produk Prototipe</li>
+                            </ol>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="col md-6">
-                <div class="card card-round card-success">
-                    <h5 class="card-header">Kriteria Inovasi</h5>
-                    <ol>
-                        <li>Pembaharuan/ orisinil/ modifikasi</li>
-                        <li>Memudahkan pelayanan</li>
-                        <li>Mempercepat pelayanan</li>
-                        <li>Disebarluaskan</li>
-                        <li>Bermanfaat</li>
-                        <li>Spesifik</li>
-                        <li>Berkelanjutan</li>
-                        <li>Solusi/ upaya pemecahan masalah</li>
-                        <li>Dapat dihargai: a. Diaplikasikan di Internal satker</li>
-                        <li>Dapat dihargai: b. Diadopsi satker serumpun</li>
-                        <li>Dapat dihargai: c. Diadopsi satker eksternal di luar rumpun</li>
-                        <li>Percontohan Nasional: Diadopsi satker serumpun (90%)</li>
-                        <li>Percontohan Nasional: Diadopsi satker di luar rumpun (50%) </li>
-                        <li>Percontohan Nasional: Diadopsi satker IP lain</li>
-                    </ol>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="kriteria">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapsekriteria" aria-expanded="false" aria-controls="collapsekriteria">
+                        Kriteria Inovasi
+                    </button>
+                </h2>
+                <div id="collapsekriteria" class="accordion-collapse collapse" aria-labelledby="kriteria" data-bs-parent="#inovasi">
+                    <div class="accordion-body">
+                        <br>
+                        <div class="card card-round card-success">
+                            <h5 class="card-header">Kriteria Inovasi</h5>
+                            <ol>
+                                <li>Pembaharuan/ orisinil/ modifikasi</li>
+                                <li>Memudahkan pelayanan</li>
+                                <li>Mempercepat pelayanan</li>
+                                <li>Disebarluaskan</li>
+                                <li>Bermanfaat</li>
+                                <li>Spesifik</li>
+                                <li>Berkelanjutan</li>
+                                <li>Solusi/ upaya pemecahan masalah</li>
+                                <li>Dapat dihargai: a. Diaplikasikan di Internal satker</li>
+                                <li>Dapat dihargai: b. Diadopsi satker serumpun</li>
+                                <li>Dapat dihargai: c. Diadopsi satker eksternal di luar rumpun</li>
+                                <li>Percontohan Nasional: Diadopsi satker serumpun (90%)</li>
+                                <li>Percontohan Nasional: Diadopsi satker di luar rumpun (50%) </li>
+                                <li>Percontohan Nasional: Diadopsi satker IP lain</li>
+                            </ol>
+                        </div>
+                    </div>
                 </div>
             </div>
+                
         </div>
-        
+
     </main>
 
     <footer class="text-center">
