menambah 5 budaya organisasi

--- a/rbzi.html
+++ b/rbzi.html
@@ -938,7 +938,35 @@
                                 <li><a href="http://10.32.8.219/minibuz/backend/web" target="_blank">Buka Aplikasi Minibuz (<b>Jaringan Lokal</b>)</a></li>
                                 <li><a href="https://drive.google.com/file/d/1RHRj7HVly2vEyUh-nL_dqsuEhWMqnxHT/view?usp=sharing" target="_blank">PermenPAN-RB 90 Tahun 2021 tentang Pembangunan ZI menuju WBK WBBM</a></li>
                                 <li><a href="https://drive.google.com/file/d/1qnMVJVTA--Z-hfJHhYVyrrnpVEqfiD8y/view?usp=sharing" target="_blank">Pedoman Pembangunan ZI BPS</a></li>
+                                <li>
+                                    <a href="https://berakhlak.streamlit.app" target="_blank">Panduan Berakhlak Pegawai BPS</a>
+                                </li>
                             </ul>
+                        </p>
+                        <hr>
+                        <p>
+                            Lima (5) Budaya Organisasi BPS:
+                            <ol>
+                                <li>
+                                    <i>Be a Leader</i>, Budaya ini mendorong setiap pegawai untuk menjadi pemimpin dalam tugas dan tanggung jawab mereka, bukan hanya sebagai pengikut. Hal ini bertujuan untuk menciptakan lingkungan kerja yang proaktif dan inovatif.
+                                </li>
+                                <br>
+                                <li>
+                                    <b>Inovasi</b>, Inovasi tanpa henti menjadi salah satu pilar penting di BPS. Pegawai didorong untuk terus mencari cara baru dan lebih baik dalam melakukan pekerjaan mereka, serta beradaptasi dengan perubahan yang cepat di lingkungan kerja.
+                                </li>
+                                <br>
+                                <li>
+                                    <b>KKD (Komunikasi, Kolaborasi, dan Diplomasi)</b>, KKD menekankan pentingnya komunikasi yang efektif, kolaborasi antar tim, dan kemampuan diplomasi dalam berinteraksi dengan berbagai pihak. Ini membantu dalam membangun hubungan yang baik dan memfasilitasi kerja sama yang produktif.
+                                </li>
+                                <br>
+                                <li>
+                                    <b>Kualitas Data</b>, BPS berkomitmen untuk menjaga kualitas data yang tinggi. Setiap pegawai diharapkan untuk memastikan bahwa data yang dihasilkan akurat, relevan, dan dapat dipercaya, sehingga dapat memberikan informasi yang berguna bagi pengambilan keputusan.
+                                </li>
+                                <br>
+                                <li>
+                                    <b>Kerja Keras dan Kerja Cerdas</b>, Budaya ini mengajak pegawai untuk tidak hanya bekerja keras, tetapi juga bekerja dengan cerdas. Ini berarti menggunakan strategi dan alat yang tepat untuk meningkatkan efisiensi dan efektivitas dalam pekerjaan mereka.
+                                </li>
+                            </ol> 
                         </p>
                     </div>
                 </div>
