menambah daftar data jabar di menu pss

--- a/pss.html
+++ b/pss.html
@@ -783,6 +783,35 @@
         </div>
     </main>
 
+    <main class="container my-4">
+        <div class="accordion" id="daftardata">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingdata">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapsedata" aria-expanded="false" aria-controls="collapsedata">
+                        Daftar Data Jabar
+                    </button>
+                </h2>
+                <div id="collapsedata" class="accordion-collapse collapse" aria-labelledby="headingdata" data-bs-parent="#accordiondata">
+                    <div class="accordion-body">
+                        <br>
+                        <p>
+                            <ul>
+                                <li>
+                                    <a href="https://pss3200.streamlit.app/Daftar_Data_Jabar" target="_blank">Data Prioritas Jabar</a>
+                                </li>
+                                <li>
+                                    <a href="epss/index.html" target="_blank">Open Data Jabar</a>
+                                </li>
+                            </ul>
+                            
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </main>
+
     <footer class="text-center">
         <p>@fhy3273</p>
     </footer>
