menambah link untuk desa cantik

--- a/cantik.html
+++ b/cantik.html
@@ -424,9 +424,18 @@
         </div>
     </main>
 
+    <main class="container my-4">
+        <div class="accordion-body">
+            <p class="text-center">
+                <a href="https://firmanh3200.github.io/cantik">Contoh Implementasi GSBPM dalam Kegiatan Statistik Desa/Kelurahan</a>
+            </p>
+        </div>
+        
+    </main>
+
     <footer class="text-center">
         <hr class="divider">
-        <p>Mari Peduli - Mari Membaca di Portal Edukasi dan Literasi</p>
+        <p>Mari Peduli: Mari Budayakan Membaca - Portal Edukasi dan Literasi</p>
         <p>@fhy3273</p>
     </footer>
     
