--- a/pss.html
+++ b/pss.html
@@ -800,7 +800,7 @@
                                     <a href="https://pss3200.streamlit.app/Daftar_Data_Jabar" target="_blank">Data Prioritas Jabar</a>
                                 </li>
                                 <li>
-                                    <a href="epss/index.html" target="_blank">Open Data Jabar</a>
+                                    <a href="pss/index.html" target="_blank">Open Data Jabar</a>
                                 </li>
                             </ul>
                             
@@ -814,7 +814,7 @@
 
     <footer class="text-center">
         <hr class="divider">
-        <p>Mari Peduli - Mari Membaca di Portal Edukasi dan Literasi</p>
+        <p>Mari Peduli: Mari Budayakan Membaca - Portal Edukasi dan Literasi</p>
         <p>@fhy3273</p>
     </footer>
     
