--- a/sakip.html
+++ b/sakip.html
@@ -410,7 +410,7 @@
 
     <footer class="text-center">
         <hr class="divider">
-        <p>Mari Peduli - Mari Membaca di Portal Edukasi dan Literasi</p>
+        <p>Mari Peduli: Mari Budayakan Membaca - Portal Edukasi dan Literasi</p>
         <p>@fhy3273</p>
     </footer>
     
