--- a/pss/index.html
+++ b/pss/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: sans-serif;
-      margin: 0; /* Menghilangkan margin default body */
+      margin: 55; /* Menghilangkan margin default body */
     }
 
     /* Sticky Header Styling */
@@ -34,7 +34,7 @@
       padding: 5px;
       border: 1px solid #ccc;
       border-radius: 4px;
-      font-size: 14px;
+      font-size: 19px;
     }
 
     /* Styling untuk Tabel */
@@ -44,6 +44,7 @@
     #myTable th, #myTable td {
       text-align: left;
       padding: 8px;
+      font-size: 13px;
     }
     #myTable th {
       background-color: #f2f2f2;
@@ -58,10 +59,10 @@
     <p>Sumber: Open Data Jabar Kondisi 28 Agustus 2025</p>
     
     <div id="filterContainer">
-      <label for="filterDropdown">Produsen Data:</label>
-      <select id="filterDropdown">
-        <option value="">Semua</option>
-      </select>
+        <label for="filterDropdown">Produsen Data:</label>
+        <select id="filterDropdown">
+            <option value="">Semua</option>
+        </select>
     </div>
   </div>
   <br>
@@ -79,6 +80,31 @@
         </tbody>
     </table>
   </div>
+  <br><br>
+  <hr>
+  <div class="row">
+    <div class="card">
+        <div class="card card-header">Pertanyaan:</div>
+        <div class="card card-body">
+            <p>
+                <ol>
+                    <li>Apakah sudah tersedia Standar Data?</li>
+                    <li>Apakah Metadata Kegiatan Statistik (MS-Keg) sudah dibuat?</li>
+                    <li>Apakah Metadata Indikator (MS-Ind) sudah dibuat?</li>
+                    <li>Apakah Metadata Variabel (MS-Var) sudah dibuat?</li>
+                    <li>Apakah sudah mengajukan permintaan Rekomendasi Statistik?</li>
+                </ol>
+            </p>
+        </div>
+    </div>
+  </div>
+  <hr>
+  <div class="text-center">
+    <p>
+        @ Tim PSS BPS Provinsi Jawa Barat
+    </p>
+  </div>          
+      
   
 
   <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
