menambah target pada link desa cantik

--- a/cantik.html
+++ b/cantik.html
@@ -427,7 +427,7 @@
     <main class="container my-4">
         <div class="accordion-body">
             <p class="text-center">
-                <a href="https://firmanh3200.github.io/cantik">Contoh Implementasi GSBPM dalam Kegiatan Statistik Desa/Kelurahan</a>
+                <a href="https://firmanh3200.github.io/cantik" target="_blank">Contoh Implementasi GSBPM dalam Kegiatan Statistik Desa/Kelurahan</a>
             </p>
         </div>
         
