menambah materi pembinaan di menu cantik

--- a/cantik.html
+++ b/cantik.html
@@ -57,6 +57,9 @@
             <li class="nav-item" role="presentation">
                 <button class="nav-link" id="tab4-tab" data-bs-toggle="tab" data-bs-target="#tab4" type="button" role="tab" aria-controls="tab4" aria-selected="false">List Ragam Data</button>
             </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link" id="tab5-tab" data-bs-toggle="tab" data-bs-target="#tab5" type="button" role="tab" aria-controls="tab5" aria-selected="false">Materi Pembinaan</button>
+            </li>
         </ul>
 
         <!-- Tab Content - Content will be dynamically loaded by JavaScript -->
@@ -421,6 +424,33 @@
                 </div>
             </div>
 
+            <!-- MATERI -->
+            <div class="tab-pane fade" id="tab5" role="tabpanel" aria-labelledby="tab5-tab">
+                <h3>Materi Pembinaan Statistik</h3>
+                <br>
+                <div class="accordion" id="accordionTab5">
+                    <div class="accordion-item">
+                        <div class="accordion-body">
+                            <br>
+                            <p>
+                                <ul>
+                                    <li><a href="https://drive.google.com/file/d/1d3hF2OBdOb_tSbjB9fxHCFD2VEotBnBb/view?usp=sharing" target="_blank">Langkah Praktis Survei dan Kompilasi Produk Administrasi</a></li>
+                                    <li><a href="https://drive.google.com/file/d/1cmB7U6qWBQYrG_5sUiuKJyz4EDb20IL5/preview" target="_blank">Dasar-dasar Statistik</a></li>
+                                    <li><a href="https://drive.google.com/file/d/1XT98Jg_G1jbAT3yNeTz1gTvQkMrjUwZA/preview" target="_blank">Perancangan Kegiatan Statistik</a></li>
+                                    <li><a href="https://drive.google.com/file/d/1Ocu8Kwz10WeQeRaS2FaAdLlKCGrWaQKo/preview" target="_blank">Perencanaan Kegiatan Statistik</a></li>
+                                    <li><a href="https://drive.google.com/file/d/1EqRNPp19xhPI7Njc_yEii2QQvBV2WPb1/preview" target="_blank">Pengumpulan Data</a></li>
+                                    <li><a href="https://drive.google.com/file/d/18TFFNbZaDUt9JJkMalDhlynYP4--7ZlE/preview" target="_blank">Pengolahan Data</a></li>
+                                    <li><a href="https://drive.google.com/file/d/1Gakcm7etk2V-YQ-PFkC51Rbf3oO1kvXN/preview" target="_blank">Analisis</a></li>
+                                    <li><a href="https://drive.google.com/file/d/1WLuE8fo5vu3QADpTPuYKJQUTQdY6Xs6P/preview" target="_blank">Diseminasi dan Evaluasi</a></li>
+                                    <li><a href="https://drive.google.com/file/d/1w6YVhX4ZnjzuiKy6GVHEpHG0cmWPLaPe/view?usp=sharing" target="_blank">Manajemen Kualitas Data</a></li>
+                                    <li><a href="https://drive.google.com/file/d/18Em1hySNdkAoEt4YJysUblFd0eQGOIwX/preview" target="_blank">Contoh Kegiatan Statistik</a></li>
+                                </ul>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </main>
 
@@ -430,7 +460,6 @@
                 <a href="https://firmanh3200.github.io/cantik" target="_blank">Contoh Implementasi GSBPM dalam Kegiatan Statistik Desa/Kelurahan</a>
             </p>
         </div>
-        
     </main>
 
     <footer class="text-center">
